<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtProfileSetting"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtYouAreLoggedInAs"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/txtLoggedinAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUserName"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="89dp" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonlayout"
        android:onClick="onClickLoginBtn"
        android:padding="10dp"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/forgot_button"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonlayout"
        android:onClick="onClickRequestLoan"
        android:padding="10dp"
        android:text="Help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/forgot_button"
        app:layout_constraintVertical_bias="0.222" />


</LinearLayout>